Add main content

--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
     </nav>
   </header>
 
+  <main>
+    <figure>
+      <img src="images/beets.jpg" alt="">
+      <figcaption>
+        A bundle of organic beets from a local farm food co-op program.
+      </figcaption>
+    </figure>
 
+    <p>
+      <t>55 to 65 days</t> are needed from germination to harvest of the root.
+      The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked
+      vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either
+      alone or combined with any salad vegetable.
+      In fact, <cite>Jim Halpert</cite> once said this about beets, “Fact, bears eat beets. Bears, beets, <i>Battlestar
+      Galactica</i>”.
+      <blockquote>
+      I have some <i>weird</i> habits. For instance, <b>I love beets</b>. Show me a salad bar and I will clean them
+      out of their beets.
+      </blockquote>
+      <cite>— Chris Pratt
+    </p>
+  </main>
 </body>
 </html>
