Add nutritional information

--- a/index.html
+++ b/index.html
@@ -38,6 +38,32 @@
       </blockquote>
       <cite>— Chris Pratt
     </p>
+
+    <h2>Common varieties</h2>
+
+      <ol>
+        <li>Albino</li>
+        <li>Bull’s Blood</li>
+        <li>Chioggia</li>
+        <li>Detroit Dark Red</li>
+        <li>Early Wonder</li>
+      </ol>
+
+    <h2>Nutritional information</h2>
+      <dl>
+        <dt>Serving size:</dt><dd> 100 g</dd>
+        <dt>Energy:</dt><dd> 180 kJ</dd>
+        <dt>Carbohydrates:</dt><dd> 9.96 g</dd>
+        <dt>Fat:</dt><dd> 0.18 g</dd>
+        <dt>Protein:</dt><dd> 1.68 g</dd>
+      </dl>
+
+    <h2>Tags</h2>
+Crimson
+Awesome
+Pickle-able
+Vegetable!
+
   </main>
 </body>
 </html>
