Add tags and edits

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       In fact, <cite>Jim Halpert</cite> once said this about beets, “Fact, bears eat beets. Bears, beets, <i>Battlestar
       Galactica</i>”.
       <blockquote>
-      I have some <i>weird</i> habits. For instance, <b>I love beets</b>. Show me a salad bar and I will clean them
+      I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them
       out of their beets.
       </blockquote>
       <cite>— Chris Pratt
@@ -41,28 +41,35 @@
 
     <h2>Common varieties</h2>
 
-      <ol>
-        <li>Albino</li>
-        <li>Bull’s Blood</li>
-        <li>Chioggia</li>
-        <li>Detroit Dark Red</li>
-        <li>Early Wonder</li>
-      </ol>
+    <ol>
+      <li>Albino</li>
+      <li>Bull’s Blood</li>
+      <li>Chioggia</li>
+      <li>Detroit Dark Red</li>
+      <li>Early Wonder</li>
+    </ol>
 
     <h2>Nutritional information</h2>
-      <dl>
-        <dt>Serving size:</dt><dd> 100 g</dd>
-        <dt>Energy:</dt><dd> 180 kJ</dd>
-        <dt>Carbohydrates:</dt><dd> 9.96 g</dd>
-        <dt>Fat:</dt><dd> 0.18 g</dd>
-        <dt>Protein:</dt><dd> 1.68 g</dd>
-      </dl>
+    <dl>
+      <dt>Serving size:</dt><dd> 100 g</dd>
+      <dt>Energy:</dt><dd> 180 kJ</dd>
+      <dt>Carbohydrates:</dt><dd> 9.96 g</dd>
+      <dt>Fat:</dt><dd> 0.18 g</dd>
+      <dt>Protein:</dt><dd> 1.68 g</dd>
+    </dl>
 
     <h2>Tags</h2>
-Crimson
-Awesome
-Pickle-able
-Vegetable!
+    <ul>
+      <li>Crimson</li>
+      <li>Awesome</li>
+      <li>Pickle-able</li>
+      <li>Vegetable!</li>
+      <li>Delicious</li>
+    </ul>
+
+    <footer>
+      Source: Wikipedia; Last modified: <time>Aug 30, 2014</time>
+    </footer>
 
   </main>
 </body>
