Add footer and edits

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Beetroot (<i>Beta vulgaris</i>)</title>
+  <title>Beetroot</title>
 </head>
 <body>
   <header>
@@ -25,6 +25,7 @@
       </figcaption>
     </figure>
 
+    <article>
     <p>
       <t>55 to 65 days</t> are needed from germination to harvest of the root.
       The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked
@@ -67,10 +68,13 @@
       <li>Delicious</li>
     </ul>
 
-    <footer>
-      Source: Wikipedia; Last modified: <time>Aug 30, 2014</time>
-    </footer>
-
+    </article>
   </main>
+
+  <footer>
+    Source: <a href="Wikipedia">; Last modified: <time>Aug 30, 2014</time>
+  </footer>
+
+
 </body>
 </html>
