--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <article>
     <p>
-      <t>55 to 65 days</t> are needed from germination to harvest of the root.
+      <time>55 to 65 days</time> are needed from germination to harvest of the root.
       The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked
       vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either
       alone or combined with any salad vegetable.
@@ -37,7 +37,7 @@
       I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them
       out of their beets.
       </blockquote>
-      <cite>— Chris Pratt
+      <cite>— Chris Pratt</cite>
     </p>
 
     <h2>Common varieties</h2>
