Make more edits to html

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
 
     <article>
     <p>
-      <time>55 to 65 days</time> are needed from germination to harvest of the root.
+      55 to 65 days are needed from germination to harvest of the root.
       The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked
       vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either
       alone or combined with any salad vegetable.
-      In fact, <cite>Jim Halpert</cite> once said this about beets, “Fact, bears eat beets. Bears, beets, <i>Battlestar
-      Galactica</i>”.
+      In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar
+      Galactica</i>”</q>.
+    </p>
+    <p>
       <blockquote>
       I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them
       out of their beets.
@@ -74,7 +76,6 @@
   <footer>
     Source: <a href="Wikipedia">; Last modified: <time>Aug 30, 2014</time>
   </footer>
-
 
 </body>
 </html>
