--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>”</q>.</p>
       <blockquote>
-        <p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them
-        out of their beets.</p>
+        <p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.</p>
         <p><cite>— Chris Pratt></cite></p>
       </blockquote>
 
