--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>”</q>.</p>
       <blockquote>
         <p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.</p>
-        <p><cite>- Chris Pratt></cite></p>
+        <p><cite>- Chris Pratt</cite></p>
       </blockquote>
 
     <h2>Common varieties</h2>
